# cli-tools-rs

./: Cargo.toml  README.md  config.yaml
common/: Cargo.toml
common/src/: lib.rs  run.rs
common/src/cmd/: cat.rs  mod.rs  raw.rs  ssh.rs  tail.rs
rcat/: Cargo.toml
rcat/src/: main.rs
rtail/: Cargo.toml
rtail/src/: main.rs
