[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
bytes = "1.3.0"
russh = { version = "0.34.0", features = ["openssl"] }
russh-keys = { version = "0.22.0", features = ["openssl"] }
anyhow = "1.0.66"
tokio = { version = "1", features = ["full"] }
yaml-rust = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
